--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\Users\\bialo\\miniconda3\\envs\\lambeth\\python.exe"
+    "python.pythonPath": "C:\\Users\\bialo\\miniconda3\\envs\\lambeth\\python.exe",
+    "python.linting.pylintEnabled": true,
+    "python.linting.flake8Enabled": true,
+    "python.linting.enabled": true
 }
